--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">CoolWeather</string>
+    <string name="app_name">酷欧天气</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title">标题</string>
 
 </resources>
